<resources>
    <string name="app_name">concesionario</string>
    <string name="title_activity_index">Index</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="codigo_factura">Codigo Factura</string>
    <string name="fecha">Fecha</string>
    <string name="placa">Placa</string>
    <string name="buscar">Buscar</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="valor">Valor</string>
    <string name="activo">Activo</string>
    <string name="consultar">Consultar</string>
    <string name="guardar">Guardar</string>
    <string name="anular">Anular</string>
    <string name="limpiar">Limpiar</string>
</resources>